changed 'About' section

--- a/public/index.html
+++ b/public/index.html
@@ -145,70 +145,64 @@
         </div>
     </div>
 
-    <div class="row" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                    <h2>About</h2>
-                    <h4>Scripler will make the ebook revolution accessible to anyone who has something to say.</h4>
-                    <div class="row">
-                        <p>&nbsp;</p>
-                    </div>
-                    <h4 class="text-center text-color-black">The Scripler Team</h4>
-                </div>
-            </div>
+<div class="row" id="about">
+  <div class="container">
+      <div class="row">
+          <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+              <h2>About</h2>
+              <h4>Scripler will make the ebook revolution accessible to anyone who has something to say.</h4>
+              <div class="row">
+                  <p>&nbsp;</p>
+              </div>
+              <h3>The Scripler Team</h3>
+          </div>
+      </div>
 
-            <div class="row">
-                <p>&nbsp;</p>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-4 col-sm-offset-2">
-                    <h3><a href="mailto:david@scripler.com">David Walther Birk</a>, <span>Project Lead</span></h3>
-                    Is actually an archaeologist!
-                </div>
-                <div class="hidden-sm hidden-md hidden-lg">
-                    <p>&nbsp;</p>
-                </div>
-                <div class="col-xs-12 col-sm-4">
-                    <h3><a href="mailto:morten@scripler.com">Morten Garbøl Franck</a>, <span>Developer</span></h3>
-                    Is addicted to:<br />
-                    <ul><li>Lists</li></ul>
-                </div>
-            </div>
-            <div class="row">
-                <p>&nbsp;</p>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-4 col-sm-offset-2">
-                    <h3><a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a>, <span>Communications</span></h3>
-                    Plays the saxophone (really poorly).
-                </div>
-                <div class="hidden-sm hidden-md hidden-lg">
-                    <p>&nbsp;</p>
-                </div>
-                <div class=" col-xs-12 col-sm-4">
-                    <h3><a href="mailto:kaspar@scripler.com">Kaspar Sivertsen</a>, <span>Graphic designer</span></h3>
-                    Has no special characteristics whatsoever.
-                </div>
-            </div>
-            <div class="row">
-                <p>&nbsp;</p>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-sm-4 col-sm-offset-2">
-                    <h3><a href="mailto:roxana@scripler.com">Roxana Dobre</a>, <span>Developer</span></h3>
-                    Is addicted to cinnamon and collects lamb-toys.
-                </div>
-                <div class="hidden-sm hidden-md hidden-lg">
-                    <p>&nbsp;</p>
-                </div>
-                <div class=" col-xs-12 col-sm-4">
-                    <h3><a href="mailto:allan@scripler.com">Allan Mørk Christensen</a>, <span>Developer</span></h3>
-                    Solves the Rubik’s Cube (very slowly).
-                </div>
-            </div>
-        </div>
-    </div>
+   <div class="row">
+          <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+              <h3><a href="mailto:david@scripler.com">David Walther Birk</a>, <span>Project Lead</span></h3>
+              Is actually an archaeologist!
+          </div>
+          <div class="hidden-sm hidden-md hidden-lg">
+              <p>&nbsp;</p>
+          </div>
+          <div class="col-xs-12 col-sm-4">
+              <h3><a href="mailto:morten@scripler.com">Morten Garbøl Franck</a>, <span>Developer</span></h3>
+              Is addicted to: a) Lists.<br>
+
+          </div>
+      </div>
+
+      <div class="row">
+          <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+              <h3><a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a>, <span>Communications</span></h3>
+              Plays the saxophone (really poorly).
+          </div>
+          <div class="hidden-sm hidden-md hidden-lg">
+              <p>&nbsp;</p>
+          </div>
+          <div class=" col-xs-12 col-sm-4">
+              <h3><a href="mailto:kaspar@scripler.com">Kaspar Sivertsen</a>, <span>Graphic designer</span></h3>
+              Has no special characteristics whatsoever.
+          </div>
+      </div>
+
+      <div class="row">
+          <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+              <h3><a href="mailto:roxana@scripler.com">Roxana Dobre</a>, <span>Developer</span></h3>
+              Is addicted to cinnamon and collects lamb-toys.
+          </div>
+          <div class="hidden-sm hidden-md hidden-lg">
+              <p>&nbsp;</p>
+          </div>
+          <div class=" col-xs-12 col-sm-4">
+              <h3><a href="mailto:allan@scripler.com">Allan Mørk Christensen</a>, <span>Developer</span></h3>
+              Solves the Rubik’s Cube (very slowly).
+          </div>
+      </div>
+  </div>
+</div>
+
 
     <div class="row" id="contact">
         <div class="col-xs-12 col-md-4 left-column">
