--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </form>
-        <div class="col-xs-12 col-md-2 clearfix">
+        <div id="socialicons" class="col-xs-12 col-md-2 clearfix">
             <a class="socialicon" href="auth/facebook"><span class="icon-facebook"></span></a>
             <a class="socialicon" href="auth/linkedin"><span class="icon-linkedin"></span></a>
             <a class="socialicon"href="auth/google"><span class="icon-google-plus"></span></a>
