make dropdown menu collapse when an item is clicked

--- a/public/index.html
+++ b/public/index.html
@@ -36,22 +36,22 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="navList nav navbar-nav">
-                <li class="navpoint menu-scripler text-center">
+                <li class="navpoint menu-scripler text-center" data-target=".nav-collapse">
                     <a href="#scripler" data="scripler">Scripler</a>
                 </li>
-                <li class="navpoint menu-features text-center">
+                <li class="navpoint menu-features text-center" data-target=".nav-collapse">
                     <a href="#features" data="features">Features</a>
                 </li>
-                <li class="navpoint menu-about text-center">
+                <li class="navpoint menu-about text-center" data-target=".nav-collapse">
                     <a href="#about" data="about">About</a>
                 </li>
-                <li class="navpoint menu-contact text-center">
+                <li class="navpoint menu-contact text-center" data-target=".nav-collapse">
                     <a href="#contact" data="contact">Contact</a>
                 </li>
-                <li class="menu-loggedin text-center" style="display:none;">
+                <li class="menu-loggedin text-center" style="display:none;" data-target=".nav-collapse">
                     <a href="logout">Logout</a>
                 </li>
-                <li class="navpoint menu-login text-center">
+                <li class="navpoint menu-login text-center" data-target=".nav-collapse">
                     <a href="#login" data="login">Login</a>
                 </li>
                 <li class="navpoint menu-blog text-center">
