--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
                         <button type="button" class="button test-alpha">Start writing!</button>
                     </a>
                 </div>
-                <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter.</h4>
+                <h4 class="text-center">Or <a href="#contact" id="signUp">sign up</a> for the newsletter.</h4>
             </div>
         </div>
     </div>
