changed google tag manager id on front page

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Google Tag Manager -->
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MVL8JW"
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T9G76C"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
