--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -27,6 +27,7 @@
                 	<p>20 Ebook projects</p>
                 	<p>17 Ebook design templates</p>
                 	<p>Create custom design templates</p>
+                	<div id="price"><p>€14.00<br><span>MONTH</span></p></div>
                 	<a class="modalButtons" id="upgradePremium" ng-click="upgradePremium()">{{ upgradePremiumText }}</a>
             	</div>
         </div>
