--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -12,25 +12,57 @@
 
 <div class="wrapper-create">
 	 <!-- modal windows -->
-	 <div bn-modals ng-show="subview" class="m-modals" ng-switch="subview">
-	 	 <!-- BEGIN: Free / Premium Modal. -->
-        <div ng-switch-when="confirm" ng-controller="UpgradeModalController" class="modal">
-            	<div class="planChoice" id="freePlan">
-            		<h1>Free</h1>
-            		<p>5 Ebook projects</p>
-					<p>3 Ebook design templates</p>
-                	<a class="modalButtons" id="continueFree" ng-click="continueFree()">{{ continueFreeText }}</a>
-                </div>
-                <div class="planChoice" id="premiumPlan">
-                	<h1>Premium</h1>
-                	<p>20 Ebook projects</p>
-                	<p>17 Ebook design templates</p>
-                	<div id="price"><p>€14.00<br><span>MONTH</span></p></div>
-                	<a class="modalButtons" id="upgradePremium" ng-click="upgradePremium()">{{ upgradePremiumText }}</a>
-            	</div>
-        </div>
-        <!-- END: Free / Premium Modal. -->
-	 </div>
+	<div bn-modals ng-show="subview" class="m-modals" ng-switch="subview">
+		<!-- BEGIN: Free / Premium Modal. -->
+		<div ng-switch-when="upgrade" ng-controller="UpgradeModalController" class="modal">
+			<div class="planChoice" id="freePlan">
+				<h1>Free</h1>
+				<p>5 ebook projects</p>
+				<p>3 ebook design templates</p>
+				<a class="modalButtons" id="useFree" ng-click="useFree()">{{ useFreeText }}</a>
+			</div>
+			<div class="planChoice" id="premiumPlan">
+				<h1>Premium</h1>
+				<p>20 ebook projects</p>
+				<p>17 ebook design templates</p>
+				<div id="price"><p>€14.00<br><span>MONTH</span></p></div>
+				<a class="modalButtons" id="usePremium" ng-click="usePremium()">{{ usePremiumText }}</a>
+			</div>
+		</div>
+		<!-- END: Free / Premium Modal. -->
+
+		<!-- BEGIN: Payment Modal. -->
+		<div ng-switch-when="payment" ng-controller="PaymentModalController" class="modal">
+			<div class="upgradePayment" id="upgradePayment">
+				<form name="upgradePaymentForm" ng-submit="paymentUpgrade()" novalidate>
+				<!-- <form name="upgradePaymentForm" ng-init="setFormScope(this)" ng-submit="paymentUpgrade()" novalidate> -->
+					<h1>Upgrade to Premium</h1>
+					<p>Your card will be charged €14.00/month.</p>
+					<span><p>Card number</p></span>
+					<p>
+						<input id="paymentCardNumber" ng-model="payment.cardNumber" type="tel" placeholder="•••• •••• •••• ••••" autocompletetype="cc-number" required="required" />
+					</p>
+					<span>
+						<div>
+							<p>Expires</p>
+							<input id="paymentExpirationDate" ng-model="payment.expirationDate" type="tel" placeholder="MM / YY" autocompletetype="cc-exp" required="required" />
+							<p>CVC/CVV</p>
+							<input id="paymentCvv" ng-model="payment.cvv" type="tel" placeholder="CVC" autocompletetype="cc-cvc" required="required" />
+						</div>
+						<div>
+						</div>
+					</span>
+					<hr>
+					<p>
+						<a class="paymentButtons" id="paymentCancel" ng-click="paymentCancel()">Cancel</a>
+						<a class="paymentButtons" id="paymentUpgrade" ng-click="paymentUpgrade()">Upgrade</a>
+						<!-- <input id="paymentUpgrade" class="button" type="submit" value="Upgrade" /> -->
+					</p>
+				</form>
+			</div>
+		</div>
+		<!-- END: Free / Premium Modal. -->
+	</div>
 
 	<section class="section-unisquare" data-ng-class="{ 'white-bg' : showSettings}">
 		<div data-ng-hide="showSettings">
@@ -58,7 +90,6 @@
 				<div class="upgrade-text">
 					<!-- TODO: is there an easier way to conditionally apply the appropriate "upgrade-text" class? -->
 					<span data-ng-bind-html="upgradeText[user.level]" data-ng-class="{ 'upgrade-text-free': user.level == 'free', 'upgrade-text-premium': user.level == 'premium' }"></span>
-					<!-- TODO: insert real Upgrade/Change links here when the Premium frontend has been implemented -->
 					<a id="upgradeButton" ng-click="upgrade()" ng-if="user.level == 'free'">Upgrade</a>
 					<a id="upgradeButton" ng-click="upgrade()" ng-if="user.level == 'premium'">Change</a>
 				</div>
