--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -36,23 +36,26 @@
 			<div class="upgradePayment" id="upgradePayment">
 				<form name="upgradePaymentForm" ng-submit="paymentUpgrade()" novalidate>
 				<!-- <form name="upgradePaymentForm" ng-init="setFormScope(this)" ng-submit="paymentUpgrade()" novalidate> -->
-					<h1>Upgrade to Premium</h1>
-					<p>Your card will be charged €14.00/month.</p>
-					<span><p>Card number</p></span>
-					<p>
+					<h2 class="yellow">Upgrade to Premium</h2>
+					<p class="yellow"><em>Your card will be charged €14.00/month.</em></p>
+					<hr>
+					<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
+					<span><p class="secure-text">SECURE PAYMENT<br><a href="">LEARN MORE</a></p></span>
+					<br>
+					<span><p class="input-text">Card number</p></span>
+					<p class="card-number">
 						<input id="paymentCardNumber" ng-model="payment.cardNumber" type="tel" placeholder="•••• •••• •••• ••••" autocompletetype="cc-number" required="required" />
 					</p>
 					<span>
-						<div>
-							<p>Expires</p>
+						<div class="inputPayment" id="inputPayment">
+							<p class="input-text">Expires</p>
 							<input id="paymentExpirationDate" ng-model="payment.expirationDate" type="tel" placeholder="MM / YY" autocompletetype="cc-exp" required="required" />
-							<p>CVC/CVV</p>
+						</div>
+						<div class="inputPayment" id="inputPayment">
+							<p class="input-text">CVC/CVV<a href=""><img src="pages/images/questionmark_icon.png"></a></p>
 							<input id="paymentCvv" ng-model="payment.cvv" type="tel" placeholder="CVC" autocompletetype="cc-cvc" required="required" />
 						</div>
-						<div>
-						</div>
 					</span>
-					<hr>
 					<p>
 						<a class="paymentButtons" id="paymentCancel" ng-click="paymentCancel()">Cancel</a>
 						<a class="paymentButtons" id="paymentUpgrade" ng-click="paymentUpgrade()">Upgrade</a>
