--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -36,29 +36,29 @@
 			<div class="upgradePayment" id="upgradePayment">
 				<form name="upgradePaymentForm" ng-submit="paymentUpgrade()" novalidate>
 				<!-- <form name="upgradePaymentForm" ng-init="setFormScope(this)" ng-submit="paymentUpgrade()" novalidate> -->
-					<h2 class="yellow">Upgrade to Premium</h2>
-					<p class="yellow"><em>Your card will be charged €14.00/month.</em></p>
+					<h2>Upgrade to Premium</h2>
+					<p class="no-top-margin"><em>Your card will be charged €14.00/month.</em></p>
 					<hr>
 					<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
 					<span><p class="secure-text">SECURE PAYMENT<br><a href="">LEARN MORE</a></p></span>
 					<br>
-					<span><p class="input-text">Card number</p></span>
+					<span><p class="top-text-card">Card number</p></span>
 					<p class="card-number">
-						<input id="paymentCardNumber" ng-model="payment.cardNumber" type="tel" placeholder="•••• •••• •••• ••••" autocompletetype="cc-number" required="required" />
+						<input class="inputCardNumber" id="paymentCardNumber" ng-model="payment.cardNumber" type="tel" placeholder="•••• •••• •••• ••••" autocompletetype="cc-number" required="required" />
 					</p>
 					<span>
-						<div class="inputPayment" id="inputPayment">
-							<p class="input-text">Expires</p>
-							<input id="paymentExpirationDate" ng-model="payment.expirationDate" type="tel" placeholder="MM / YY" autocompletetype="cc-exp" required="required" />
+						<div class="paymentAir" id="paymentAir">
+							<p class="top-text-expires-cvc">Expires</p>
+							<input class="inputExpiresCVC" id="paymentExpirationDate" ng-model="payment.expirationDate" type="tel" placeholder="MM / YY" autocompletetype="cc-exp" required="required" />
 						</div>
-						<div class="inputPayment" id="inputPayment">
-							<p class="input-text">CVC/CVV<a href=""><img src="pages/images/questionmark_icon.png"></a></p>
-							<input id="paymentCvv" ng-model="payment.cvv" type="tel" placeholder="CVC" autocompletetype="cc-cvc" required="required" />
+						<div class="paymentAir" id="paymentAir">
+							<p class="top-text-expires-cvc">CVC/CVV&emsp;<a href=""><img src="pages/images/questionmark_icon.png"></a></p>
+							<input class="inputExpiresCVC" id="paymentCvv" ng-model="payment.cvv" type="tel" placeholder="CVC" autocompletetype="cc-cvc" required="required" />
 						</div>
 					</span>
 					<p>
-						<a class="paymentButtons" id="paymentCancel" ng-click="paymentCancel()">Cancel</a>
 						<a class="paymentButtons" id="paymentUpgrade" ng-click="paymentUpgrade()">Upgrade</a>
+						<a class="paymentButtons" id="paymentCancel" ng-click="paymentCancel()">Cancel</a>
 					</p>
 				</form>
 			</div>
