--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -64,6 +64,14 @@
 			</div>
 		</div>
 		<!-- END: Free / Premium Modal. -->
+
+		<!-- BEGIN: Confirmation message Modal. -->
+		<div ng-switch-when="confirmation" ng-controller="UpgradeDowngradeConfirmationController" class="modal">
+			<h1>HSSDSDSDSD</h1> <a id="confirmationClose" ng-click="confirmationClose()">Close</a>
+			<div id="upgradeDowngradeConfirmation">{{ upgradeDowngradeConfirmationMessage }}</div>
+		</div>
+		<!-- END: Free / Premium Modal. -->
+
 	</div>
 
 	<section class="section-unisquare" data-ng-class="{ 'white-bg' : showSettings}">
