--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -9,6 +9,7 @@
 <!-- End Google Tag Manager -->
 
 <link rel="stylesheet" type="text/css" href="pages/css/pages/create.css" />
+<link rel="stylesheet" type="text/css" href="pages/css/pages/sweetalert.css" />
 
 <div class="wrapper-create">
 	 <!-- modal windows -->
