--- a/public/create/index.html
+++ b/public/create/index.html
@@ -52,6 +52,65 @@
 			</div>
 		</div>
 	</div>
+	<div id="registrationModalOverlay"></div>
+	<div id="registrationModal">
+		<div class="registration-container">
+			<div class="tabs">
+				<div data-ng-click="activeModalTab = 'login'" data-ng-class="{ 'active' : activeModalTab != 'register' }">Login</div>
+				<div data-ng-click="activeModalTab = 'register'" data-ng-class="{ 'active' : activeModalTab == 'register' }" >Register</div>
+			</div>
+			<div class="tab-content clearfix">
+				<div class="registration-form" data-ng-show="activeModalTab != 'register'">
+					<form name="loginForm" data-ng-submit="submitLogin()" novalidate>
+						<div class="error-box" data-ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && registrationSubmitted " data-ng-bind="errors.email"></div>
+						<input on-click-change-text type="email" name="email" data-ng-model="login.email" data-ng-class="{ 'has-error' : loginForm.email.$invalid && !loginForm.email.$pristine && registrationSubmitted }" placeholder="Email address" data-ng-pattern="EMAIL_REGEXP" required>
+						<div class="error-box" data-ng-show="loginForm.password.$invalid && !loginForm.password.$pristine && registrationSubmitted && !forgotPassword" data-ng-bind="errors.password"></div>
+						<input data-ng-show="!forgotPassword" on-click-change-text type="password" name="password" data-ng-model="login.password" data-ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine && registrationSubmitted }" placeholder="Password" data-ng-minlength="6" required>
+						<div class="extra-bar">
+							<div class="registration-social">
+								<a class="socialicon" href="../auth/facebook"><span class="icon-facebook"></span></a>
+								<a class="socialicon" href="../auth/linkedin"><span class="icon-linkedin"></span></a>
+								<a class="socialicon" href="../auth/google"><span class="icon-google-plus"></span></a>
+							</div>
+							<div class="remember-password">
+								<div><a href="" data-ng-click="forgotPassword = true" data-ng-show="!forgotPassword">Forgot password?</a></div>
+								<div><a href="" data-ng-click="forgotPassword = false" data-ng-show="!!forgotPassword">Cancel</a></div>
+								<div><label><input type="checkbox" name="remember" data-ng-model="login.remember">Keep me logged in</label></div>
+							</div>
+						</div>
+						<hr />
+						<button type="reset" class="button registration-button cancel-button">Cancel</button>
+						<button type="submit" class="button registration-button" data-ng-show="!forgotPassword">Login</button>
+						<button type="submit" class="button registration-button" data-ng-show="!!forgotPassword">Reset password</button>
+					</form>
+				</div>
+
+				<div class="registration-form" data-ng-show="activeModalTab == 'register'">
+					<form name="registerForm" data-ng-submit="submitRegistration()" novalidate>
+						<div class="error-box" data-ng-show="registerForm.name.$invalid && !registerForm.name.$pristine && registrationSubmitted " data-ng-bind="errors.name"></div>
+						<input on-click-change-text type="text" name="name" data-ng-model="user.name" data-ng-class="{ 'has-error' : registerForm.name.$invalid && !registerForm.name.$pristine && registrationSubmitted }" placeholder="First and last name" required>
+						<div class="error-box" data-ng-show="registerForm.email.$invalid && !registerForm.email.$pristine && registrationSubmitted " data-ng-bind="errors.email"></div>
+						<input on-click-change-text type="email" name="email" data-ng-model="user.email" data-ng-class="{ 'has-error' : registerForm.email.$invalid && !registerForm.email.$pristine && registrationSubmitted }" placeholder="Email address" data-ng-pattern="EMAIL_REGEXP" required>
+						<div class="error-box" data-ng-show="registerForm.password.$invalid && !registerForm.password.$pristine && registrationSubmitted " data-ng-bind="errors.password"></div>
+						<input on-click-change-text type="password" name="password" data-ng-model="user.password" data-ng-class="{ 'has-error' : registerForm.password.$invalid && !registerForm.password.$pristine && registrationSubmitted }" placeholder="Password" data-ng-minlength="6" required>
+						<div class="extra-bar">
+							<div class="registration-social">
+								<a class="socialicon" href="../auth/facebook"><span class="icon-facebook"></span></a>
+								<a class="socialicon" href="../auth/linkedin"><span class="icon-linkedin"></span></a>
+								<a class="socialicon" href="../auth/google"><span class="icon-google-plus"></span></a>
+							</div>
+							<div class="remember-password">
+								<div class="remember-me-box"><label><input type="checkbox" name="remember">Keep me logged in</label></div>
+							</div>
+						</div>
+						<hr />
+						<button type="reset" class="button registration-button cancel-button">Cancel</button>
+						<button type="submit" class="button registration-button">Register</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="scripts/angular-file-upload-html5-shim.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/webfont/1.5.3/webfont.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
