Changed to use the values of our current pricing model.

--- a/public/index.html
+++ b/public/index.html
@@ -196,14 +196,14 @@
           <h1 class="white">Pricing</h1>
           <div class="planChoice" id="freePlan">
             <h2>Free</h2>
-            <p>5 ebook projects</p>
+            <p>3 ebook projects</p>
             <p>3 ebook design templates</p>
           </div>
           <div class="planChoice" id="premiumPlan">
             <h2>Premium</h2>
-            <p>20 ebook projects</p>
+            <p>10 ebook projects</p>
             <p>17 ebook design templates</p>
-            <h3>€14.00/month</h3>
+            <h3>$9.99/month</h3>
           </div>
         </div>
       </div>
