--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -14,6 +14,7 @@
 <div class="wrapper-create">
 	 <!-- modal windows -->
 	<div bn-modals ng-show="subview" class="m-modals" ng-switch="subview">
+
 		<!-- BEGIN: Free / Premium Modal. -->
 		<div ng-switch-when="upgrade" ng-controller="UpgradeModalController" class="modal">
 			<div class="planChoice" id="freePlan">
@@ -26,7 +27,7 @@
 				<h1>Premium</h1>
 				<p>{{ premiumNumberOfEbooks }} ebook projects</p>
 				<p>{{ premiumNumberOfDesigns }} ebook design templates</p>
-				<div id="price"><p>€{{ premiumMonthlyPrice }}<br><span>MONTH</span></p></div>
+				<div id="price"><p>${{ premiumMonthlyPrice }}<br><span>MONTH</span></p></div>
 				<a class="modalButtons" id="usePremium" ng-click="usePremium()">{{ usePremiumText }}</a>
 			</div>
 		</div>
@@ -36,9 +37,8 @@
 		<div ng-switch-when="payment" ng-controller="PaymentModalController" class="modal">
 			<div class="upgradePayment" id="upgradePayment">
 				<form name="upgradePaymentForm" ng-submit="paymentUpgrade()" novalidate>
-				<!-- <form name="upgradePaymentForm" ng-init="setFormScope(this)" ng-submit="paymentUpgrade()" novalidate> -->
 					<h2>Upgrade to Premium</h2>
-					<p class="no-top-margin"><em>Your card will be charged €14.00/month.</em></p>
+					<p class="no-top-margin"><em>Your card will be charged ${{ premiumMonthlyPrice }}/month.</em></p>
 					<hr>
 					<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
 					<span><p class="secure-text">SECURE PAYMENT<br><a href="">LEARN MORE</a></p></span>
