Small frontpage fixes

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
                 <img class="hide-logo" style="width:70px;" src="/images/logo.png">
                 <h1>Make ebooks</h1>
                 <h1 class="grey"><em>Scripler is a way to write and publish ebooks.
-                Your books will be beautiful, fully functional and ready for distribution. Oh, and it's free.</em></h1>
+                Your books will be beautiful, fully functional and ready for distribution. <span>Oh, and it's free.</span></em></h1>
                 <div class="row">
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
@@ -156,9 +156,9 @@
                     <p>With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</p>
                 </div>
                 <div class="features-right">
-                    <img src="images/features/many.png" class="pull-left">
-                    <h3>Make as many books you like</h3>
-                    <p>No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</p>
+                    <img src="images/features/premium.png" class="pull-left">
+                    <h3>Premium subscription for heavy users and professionals</h3>
+                    <p>As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</p>
                 </div>
                 <div class="features-left">
                     <img src="images/features/ebook.png" class="pull-left">
@@ -174,11 +174,6 @@
                     <img src="images/features/import.png" class="pull-left">
                     <h3>Import</h3>
                     <p>Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</p>
-                </div>
-                <div class="features-right">
-                    <img src="images/features/premium.png" class="pull-left">
-                    <h3>Premium subscription for heavy users and professionals</h3>
-                    <p>As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</p>
                 </div>
         </div>
     </div>
@@ -199,6 +194,12 @@
             <p>10 ebook projects</p>
             <p>17 ebook design templates</p>
             <h3>$9.99/month</h3>
+          </div>
+          <div class="planChoice" id="proPlan">
+            <h2>Pro</h2>
+            <p>Need more than 10 books?</p>
+            <p>&nbsp;</p>
+            <a href="mailto:info@scripler.com">Contact us</a>
           </div>
       </div>
     </div>
