--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -40,25 +40,29 @@
 					<h2>Upgrade to Premium</h2>
 					<p class="no-top-margin"><em>Your card will be charged ${{ premiumMonthlyPrice }}/month.</em></p>
 					<hr>
-					<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
-					<span><p class="secure-text">SECURE PAYMENT<br><a href="">LEARN MORE</a></p></span>
+					<a target="_blank" href="https://en.wikipedia.org/wiki/HTTPS">
+						<img class="secure-image" src="pages/images/safe_payment.png" height="45" width="45">
+						<span><p class="secure-text">SECURE PAYMENT<br>LEARN MORE</p></span>
+					</a>
 					<br>
 					<span><p class="top-text-card">Card number</p></span>
 					<p class="card-number">
-						<input class="paymentCardNumber" id="paymentCardNumber" ng-model="payment.cardNumber" type="tel" placeholder="•••• •••• •••• ••••" autocompletetype="cc-number" required="required" payment-input />
+						<!-- bind="payment.cardNumberValid" -->
+						<input id="paymentCardNumber" ng-model="payment.cardNumber" class="paymentItem" data-ng-class="{ 'paymentCardNumber': !payment.cardNumberValid, 'paymentCardNumber paymentItemValid': payment.cardNumberValid }" type="tel" placeholder="•••• •••• •••• ••••" autocompletetype="cc-number" required="required" payment-input />
 					</p>
 					<span>
 						<div class="paymentAir" id="paymentAir">
 							<p class="top-text-expires-cvc">Expires</p>
-							<input class="paymentExpiresCVC" id="paymentExpirationDate" ng-model="payment.expirationDate" type="tel" placeholder="MM / YY" autocompletetype="cc-exp" required="required" payment-input />
+							<input id="paymentExpirationDate" ng-model="payment.expirationDate" class="paymentItem" data-ng-class="{ 'paymentExpiresCVC': !payment.expirationDateValid, 'paymentExpiresCVC paymentItemValid': payment.expirationDateValid }" type="tel" placeholder="MM / YY" autocompletetype="cc-exp" required="required" payment-input />
 						</div>
 						<div class="paymentAir" id="paymentAir">
-							<p class="top-text-expires-cvc">CVC/CVV&emsp;<a href=""><img src="pages/images/questionmark_icon.png"></a></p>
-							<input class="paymentExpiresCVC" id="paymentCvv" ng-model="payment.cvv" type="tel" placeholder="CVC" autocompletetype="cc-cvc" required="required" payment-input />
+							<p class="top-text-expires-cvc">CVC/CVV&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Card_security_code"><img src="pages/images/questionmark_icon.png"></a></p>
+							<input id="paymentCvv" ng-model="payment.cvv" class="paymentItem" data-ng-class="{ 'paymentExpiresCVC': !payment.cvvValid, 'paymentExpiresCVC paymentItemValid': payment.cvvValid }" type="tel" placeholder="CVC" autocompletetype="cc-cvc" required="required" payment-input />
 						</div>
 					</span>
 					<p>
-						<a class="paymentButtons" id="paymentUpgrade" ng-click="paymentUpgrade()">Upgrade</a>
+						<!-- TODO: also disable the button visually, e.g. "grey out" the button, change the cursor, etc. -->
+						<a class="paymentButtons" id="paymentUpgrade" ng-click="!(payment.cardNumberValid || payment.expirationDateValid || payment.cvvValid) || paymentUpgrade()">Upgrade</a>
 						<a class="paymentButtons" id="paymentCancel" ng-click="paymentCancel()">Cancel</a>
 					</p>
 				</form>
