--- a/public/index.html
+++ b/public/index.html
@@ -196,10 +196,10 @@
             <h3>$9.99/month</h3>
           </div>
           <div class="planChoice" id="proPlan">
-            <h2>Pro</h2>
+            <h2>Professional</h2>
             <p>Need more than 10 books?</p>
             <p>&nbsp;</p>
-            <a href="mailto:info@scripler.com">Contact us</a>
+            <h3><a href="mailto:info@scripler.com">Contact us</a></h3>
           </div>
       </div>
     </div>
